--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -1,2 +1,7 @@
-<!--pages/publish/publish.wxml-->
-<text>pages/publish/publish.wxml</text>
+<view class="wenzi">
+  <textarea class="text" value="请输入文字描述："></textarea>
+</view>
+<view class="Img">
+  上传图片：<image src="{{image}}" bindtap="uploadImage"></image>
+</view>
+<button bindtap="clickMe" data-nid="3">发布</button>
