--- a/pages/auction/auction.wxss
+++ b/pages/auction/auction.wxss
@@ -1,3 +1,6 @@
+.auction{
+  padding-bottom: 70rpx;
+}
 .menu .item{
   display: flex;
   flex-direction: column;
@@ -16,10 +19,8 @@
   font-size: 30rpx;
   color:#8c8c8c;
 }
-.auction .item .big image{
-  align-items: center;
-  /* width: 100%;
-  height: 100%; */
+.auction .item .big{
+  padding: 50rpx;
 }
 .auction .item .small{
   display: flex;
