--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,108 +1,44 @@
-page {
-  background-color:#EDEDED;
+.head{/* 设置背景颜色以及高度 */
+  background-color: rgb(195, 226, 203);
+  height:300rpx;
 }
-.user_info_wrap {
-  height:60vmin;
-  background-color:var(--themeColor); 
-  position:relative;
+.head .users{/* 设置users这一行的布局：两边对齐以及垂直居中 */
+  padding: 40rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
 }
-.user_info_wrap .user_img_wrap .user_bg {
-  height:60vmin; 
-  filter:blur(5px);
+.head .users .man{/* 设置图像与登陆注册垂直居中 */
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
-.user_info_wrap .user_img_wrap .user_info {
-  position:absolute; 
-  left:50%; 
-  transform:translateX(-50%); 
-  top:30%; 
-  text-align:center;
+.head .users .mans{
+  font-size: 38rpx;
+  font-weight: 600;
 }
-.user_info_wrap .user_img_wrap .user_info .user_icon {
-  width:100px; 
-  height:100px; 
-  border-radius:50%; 
-  border:solid 1px #CCC;
-}
-.user_info_wrap .user_img_wrap .user_info .user_name {
-  color:#FFF; 
-  margin-top:20px; 
-  text-shadow:0 0 3px #000;
-}
-.user_info_wrap .user_btn {
-  position:absolute; 
-  left:50%; 
-  transform:translateX(-50%); 
-  top:40%; 
-  border:solid 1px greenyellow; 
-  color:greenyellow; 
-  padding:10px;
+.head .head-body{/* 设置flex布局为横向 */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  text-align: center; 
 }
 
-.menu_content {
-  position:relative;
+.body-head{/* 设置支付一栏的布局 */
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  text-align: center; 
+  background-color: #F8F8FF;
 }
-.menu_content .main {
-  position:absolute; 
-  width:90%; 
-  left:50%; 
-  transform:translateX(-50%); 
-  top:-20px; 
-  padding-bottom:20px;
+.body-head .message image{
+  width: 80rpx;
+  height: 80rpx;
 }
-.menu_content .main .history_wrap {
-  background-color:#FFF; 
-  display:flex;
-}
-.menu_content .main .history_wrap .navi {
-  flex:1; 
-  text-align:center; 
-  padding:5px 0;
-}
-.menu_content .main .history_wrap .navi .his_num {
-  color:var(--themeColor);
-}
-
-.menu_content .main .order_wrap {
-  background-color:#FFF; 
-  margin-top:10px;
-}
-.menu_content .main .order_wrap .title {
-  padding:10px; 
-  border-bottom:solid 1px #EDEDED;
-}
-.menu_content .main .order_wrap .order_content {
-  display:flex;
-}
-.menu_content .main .order_wrap .order_content .navi {
-  padding:5px 0; 
-  flex:1; 
-  text-align:center;
-}
-.menu_content .main .order_wrap .order_content .navi .icon {
-  background-color:var(--themeColor);
-}
-
-.menu_content .main .address_wrap {
-  background-color:#FFF; 
-  margin-top:10px; 
-  padding:10px;
-}
-.menu_content .main .app_wrap {
-  background-color:#FFF; 
-  margin-top:10px;
-}
-.menu_content .main .app_wrap .info_item {
-  padding:10px;
-}
-.menu_content .main .app_wrap .info_item:not(:last-child) {
-  border-bottom:solid 1px #EDEDED;
-}
-.menu_content .main .app_wrap .app_contact {
-  display:flex; 
-  justify-content:space-between;
-}/* 子元素两端对齐 */
-.menu_content .main .recommend_wrap {
-  background-color:#FFF; 
-  margin-top:10px; 
-  padding:10px;
+.body .weui-cell__bd text{
+  font-weight: 600;
 }
