--- a/pages/publish/publish.wxss
+++ b/pages/publish/publish.wxss
@@ -1,1 +1,8 @@
-/* pages/publish/publish.wxss */
+.Img image{
+  width: 200rpx;
+  height: 200rpx;
+}
+.Img{
+  display: flex;
+  flex-direction: column;
+}
